--- a/templates/customer/completion.html.twig
+++ b/templates/customer/completion.html.twig
@@ -3,7 +3,9 @@
 {% block title %}Completion{% endblock %}
 
 {% block body %}
+<div class="generalInformation">
     Your ticket number is {{ soldTicket.ticketNumber }}
     
     Passanger is {{ user.name }}
+</div>
 {% endblock %}
