--- a/templates/customer/personal_account.html.twig
+++ b/templates/customer/personal_account.html.twig
@@ -3,7 +3,11 @@
 {% block title %}Account{% endblock %}
 
 {% block body %}
-    Hello {{ user.name }}
-
-    <a href="{{ path('your_tickets') }}">Your tickets</a>
+<div class="conteinerForm">
+    <h1>Hello {{ user.name }}</h1>
+</div>
+<div class="conteinerMenu">
+    <a class="btnMenu" href="{{ path('your_tickets') }}">Your tickets</a>
+</div>
+    
 {% endblock %}
