--- a/assets/styles/main/main.css
+++ b/assets/styles/main/main.css
@@ -1,4 +1,5 @@
 body {
+    background-color: rgb(229,229,229);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -59,6 +60,7 @@ body {
 .formField label{
     text-align: end;
     margin: auto;
+    margin-right: 5px;
     width: 200px;
     font-size: 1.2em;
 }
@@ -69,45 +71,78 @@ body {
     border: none;
     height: 50px;
     background-color: rgba(255, 255, 255, 0.6);
+    font-size: 1.2em;
 }
 
 .submenu{
-    background-color: rgba(0, 0, 255, 0.096);
+    background-color: rgba(255, 255, 255, 0.7);
     color: black;
     position: absolute;
     width: 220px;
     height: 100px;
     top: 70px;
     left: 200px;
+    border-radius: 20px;
+}
+
+#submenu_div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .submenu_fields{
-    border: 1px solid black;
+    border-radius: 10px;
     display: flex;
     justify-content: center;
+    width: 150px;
+    height: 35px;
     margin-top: 10px;
+    background-color: rgba(255, 255, 255, 0.0);
 }
 
 .submenu_fields input{
-    background-color: rgba(0, 0, 255, 0.096);
+    background-color: rgba(255, 255, 255, 0);
     width: 20px;
     margin-left: 10px;
     margin-right: 10px;
 }
 
 .adjustment{
-    background-color: rgba(0, 0, 255, 0.096);
-    width: 30px;
-    height: 30px;
+    background-color: rgba(242, 255, 0, 0.650);
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
+    font-size: 1.4em;
+    border: none;
+}
+
+.adjustment:hover{
+    cursor: pointer;
+    background-color: rgba(242, 255, 0, 0.800);
+}
+
+#adjustment_count{
+    border: none;
+    width: 35px;
+    text-align: center;
     font-size: 1.2em;
+    background-color: rgba(255, 255, 255, 0);
 }
 
 #button_confirm{
     width: 80px;
-    height: 30px;
-    background-color: aqua;
-    border-radius: 15px;
+    height: 35px;
+    background-color: rgba(30, 255, 0, 0.500);
+    border-radius: 5px;
+    font-size: 1.1em;
+    border: none;
+}
+
+#button_confirm:hover{
+    cursor: pointer;
+    background-color: rgba(30, 255, 0, 0.800);
 }
 
 .conteinerButton{
