--- a/assets/styles/main/searchPage.css
+++ b/assets/styles/main/searchPage.css
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 5px;
 }
 
 .list li a{
@@ -44,8 +45,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-position-y: 85%;
-    background-attachment: fixed; 
+    background-position-y: 30%;
 }
 
 #symbolCalendar{
@@ -56,4 +56,70 @@
     margin-right: -100px;
     width: 20px;
     height: 20px;
+}
+
+#scheme_main{
+    margin: auto;
+    background-image: url(/images/airplane_schema.jpg);
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-position-y: 47%;
+    background-attachment: fixed;
+    width: 80vw;
+    height: 40vh;
+}
+
+#scheme{
+    display: flex;
+    padding-top: 85px;
+    padding-left: 290px;
+}
+
+.flex_scheme{
+    margin-right: 12.7px;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.seat{
+    appearance: none;
+    background-color: #83c6eb;
+    margin: 0;
+    margin-top: 6%;
+    font: inherit;
+    color: currentColor;
+    width: 100%;
+    height: 100%;
+    border: 0.15em solid currentColor;
+    border-radius: 0.15em;
+    transform: translateY(-0.075em);
+    display: grid;
+    place-content: center;
+}
+
+.seat:disabled{
+    background-color: rgb(88, 84, 84);
+}
+
+.seat::before{
+    content: "";
+    width: 1em;
+    height: 1em;
+    transform: scale(0);
+    transition: 120ms transform ease-in-out;
+    box-shadow: inset 1em 1em var(--form-control-color);
+}
+
+.seat:checked::before{
+    transform: scale(1);
+    background-color: rgb(38, 255, 0);
+}
+
+.third_seat{
+    margin-top: 30px;
+}
+
+.emergency{
+    margin-right: 27px;
 }
