--- a/templates/customer/informationAboutFlight.html.twig
+++ b/templates/customer/informationAboutFlight.html.twig
@@ -14,15 +14,80 @@
 <div class="generalInformation" style="margin-top: 30px;">
     You can choose seats
 </div> 
-    <ul>
-        <div class="flexbox">
+<div id="scheme_main">
+    <div id="scheme">
         {% for ticket in tickets %}
-        <div>
-            <li>{{ ticket.seatType }}  - <a href="/addOptions/{{ ticket.id }}">Buy</a></li>
-        </div>
+        {% if 'A' in ticket.seatNumber and '9' in ticket.seatNumber and '19' not in ticket.seatNumber %}
+            <div class="flex_scheme emergency">
+                <input class="seat" type="checkbox" name="seat" value={{ ticket.id }}>
+                {# <a href="/addOptions/{{ ticket.id }}"><div class="seat"></div></a> #}
+        {% elseif 'A' in ticket.seatNumber %}
+            <div class="flex_scheme">
+                <input class="seat" type="checkbox" name="seat" value={{ ticket.id }}>
+                {# <a href="/addOptions/{{ ticket.id }}"><div class="seat"></div></a> #}
+        {% elseif 'C' in ticket.seatNumber %}
+            <input class="seat third_seat" type="checkbox" name="seat" value={{ ticket.id }}>
+            {# <a href="/addOptions/{{ ticket.id }}"><div class="seat third_seat"></div></a> #}
+        {% elseif 'F' in ticket.seatNumber %}
+            <input class="seat" type="checkbox" name="seat" disabled value={{ ticket.id }}>
+                {# <a href="/addOptions/{{ ticket.id }}"><div class="seat"></div></a> #}
+            </div>
+        {% else %}
+            <input class="seat" type="checkbox" name="seat" value={{ ticket.id }}>
+            {# <a href="/addOptions/{{ ticket.id }}"><div class="seat"></div></a> #}
+        {% endif %}
         {% endfor %}
-        </div>
-    </ul>
-
+    </div> 
+<!-- <div id="scheme">
+    <div class="flex_scheme">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat third_seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+    </div>
+    <div class="flex_scheme">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat  third_seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+    </div>
+    <div class="flex_scheme">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat  third_seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+    </div>
+    <div class="flex_scheme">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat third_seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+    </div>
+    <div class="flex_scheme">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat third_seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+    </div>
+    <div class="flex_scheme">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat third_seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+    </div>
+</div> -->
+</div> 
 
 {% endblock %}
