--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -26,4 +26,8 @@
 <div class="conteinerMenu">
     <a class="btnMenu" href="{{ path('connect_google_start') }}">With google</a>
 </div>
+
+<div>
+    If you don't have account yo can <a href="{{ path('app_register') }}">sing up</a>
+</div>
     {% endblock %}
