--- a/templates/customer/searchTickets.html.twig
+++ b/templates/customer/searchTickets.html.twig
@@ -28,7 +28,7 @@
     {% for flight in flights %}
     <div class="list">
         <ul>
-            <li>{{ flight.pointOfDeparture }} &#8658; {{ flight.arrivalPoint }} &nbsp;&nbsp;&nbsp;&nbsp; <p id="symbolCalendar"></p> {{ flight.departureTimeString}} <a href="/chooseTicket/{{ flight.id }}" >More information</a></li>
+            <li>{{ flight.pointOfDeparture }} &#8658; {{ flight.arrivalPoint }} &nbsp;&nbsp;&nbsp;&nbsp; <p id="symbolCalendar"></p> {{ flight.departureTimeString}} <a href="/chooseTicket/{{ flight.id }}" >More information</a></li>{% if passengers > flight.tickets|length %} Left {{ flight.tickets|length }} tickets {% endif %}
         </ul>
     </div>
     {% endfor %}
