--- a/templates/welcome.html.twig
+++ b/templates/welcome.html.twig
@@ -17,15 +17,11 @@
         <a href="#">Information & services</a>
     </div>
     <div class="navItem">
-        <a href="#">Check-in & bookings</a>
+        <a href="{{ path('personal_account') }}">Check-in & bookings</a>
     </div>
     {% if user == null %}
     <div class="navItem">
-        <a href="{{ path('app_register') }}">Sign in</a>
-    </div>
-    {% else %}
-    <div class="navItem">
-        <a href="{{ path('personal_account') }}">Personal account</a>
+        <a href="{{ path('app_login') }}">Sign in</a>
     </div>
     {% endif %}
 </div>
